--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="container-password" onclick="copyPassword()" class="container-password hide">
       <span class="title">Sua senha foi gerada!:</span>
       <span id="password"  class="password"></span>
-      <button id="button-copy-password"<div>copy password</div></button>
+      <button id="button-copy-password"></button><div>copy password</div></button>
     </div>
     
   </div>
